--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -2,11 +2,11 @@ name: CodeCov
 on: [pull_request]
 jobs:
   run:
-    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        python-version: [3.7, 3.8, 3.9, "3.10"]        
+        python-version: [3.7, 3.8, 3.9, "3.10"]
+    runs-on: ${{ matrix.os }}
     env:
       OS: ${{ matrix.os }}
       PYTHON: ${{ matrix.python-version }}
@@ -21,14 +21,12 @@ jobs:
         with:
           poetry-version: 1.1.11
       - name: Install dev-dependencies
-        run: poetry install        
-      - name: Install dependencies
-        run: pip install arrow langcodes httpx importlib-metadata
+        run: poetry install
       - name: Generate Report
         run: |
-          pip install coverage pytest arrow
-          coverage run -m pytest
-          coverage xml
+          poetry run pip install coverage
+          poetry run coverage run -m pytest
+          poetry run coverage xml
       - name: Upload Coverage to Codecov
         uses: codecov/codecov-action@v2
         with:
